# grok-build

./: .editorconfig  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  TEAMS.md  clippy.toml  opencode.json  rustfmt.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  lint.yml  rust.yml  security.yml  self-heal.yml
.grok/: AGENTS.md  config.toml
.grok/agents/: architect.md  debugger.md  documenter.md  implementer.md  orchestrator-prime.md  refactorer.md  researcher.md  reviewer.md  tester.md
crates/codegen/xai-grok-agent/src/: builder.rs
crates/codegen/xai-grok-agent/templates/: prompt.md  subagent_prompt.md
crates/codegen/xai-grok-config-types/: Cargo.toml
crates/codegen/xai-grok-config-types/src/: lib.rs  network.rs
crates/codegen/xai-grok-init/: Cargo.toml
crates/codegen/xai-grok-init/src/: analyzer.rs  export.rs  git.rs  lib.rs  renderer.rs  scanner.rs
crates/codegen/xai-grok-models/: default_models.json
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-sampler/src/: client.rs  retry.rs
crates/codegen/xai-grok-sampling-types/src/: conversation.rs  types.rs
crates/codegen/xai-grok-shell/: Cargo.toml
crates/codegen/xai-grok-shell/src/: managed_config.rs
crates/codegen/xai-grok-tools/: Cargo.toml
crates/codegen/xai-grok-warp/: Cargo.toml
crates/codegen/xai-grok-warp/src/: client.rs  ip_check.rs  lib.rs  platform.rs  rate_limiter.rs  sudo.rs
crates/codegen/xai-grok-workspace/: Cargo.toml
(+62 files in other folders)
