[package]
license = "Apache-2.0"
name = "xai-grok-warp"
version = "0.1.0"
edition.workspace = true
description = "Native Cloudflare WARP integration for Grok Build — IP rotation, platform detection, and warp-cli interaction"

[dependencies]
reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "time", "sync"] }
tracing = { workspace = true }
xai-grok-config-types = { workspace = true }

[lints]
workspace = true
